Use Zstd compression Fixes #1

--- a/templates/logrotate.j2
+++ b/templates/logrotate.j2
@@ -11,11 +11,12 @@
     # keep and truncate the original file
     copytruncate
 
-    # xz compression
+    # zstd compression
     compress
-    compresscmd /bin/xz
-    uncompresscmd /bin/unxz
-    compressext .xz
+    compresscmd /bin/zstd
+    uncompresscmd /bin/unzstd
+    compressext .zst
+    compressoptions -10 -T0
 
     # we copy so compress right away
     nodelaycompress
